# libflatview

./: Cargo.toml  README.md
.github/workflows/: linux_tests.yml  macos_tests.yml  tests.yml  windows_tests.yml  wine_tests.yml
src/: cache.rs  lib.rs  path_resolver.rs  platform.rs  single_cache.rs
src/platform/: mod.rs  unix.rs  windows.rs
tests/: huge_test.rs
