[package]
name = "libflatview"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
memmap2 = "0.6"
linked-hash-map = "0.5"
num-traits = "0.2"

[target.'cfg(unix)'.dependencies]
rustix = {version = "0.37", features = ["param"]}

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.48", features = [
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_System_Ioctl"
]}

[dev-dependencies]
tempfile = "3"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
